--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
+
 <html>
-  <body>
-    Hello there! General Kenobi. :D
-  </body>
-  <head>
-  <title> Macarooni's Page </title>
-  </head>
-  </html>
+    <head>
+        <title>Macarooni's Page</title>
+    </head>
+
+    <body>
+        Hello there! :D
+    </body>
+</html>
