--- a/index.html
+++ b/index.html
@@ -11,4 +11,6 @@
     <h1>
     My sweater is still itchy.
     </h1>
+    
+    <img src="https://octodex.github.com/images/vinyltocat.png">
 </html>
