--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Macarooni's Page</title>
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
